src/tailwind/xds.css
@import '../../node_modules/@empathyco/x-design-system/dist/index.css';

/* TODO - Review this. */
@source './**/*.{js,jsx,ts,tsx,vue}';
/*
@layer components {
  .x-message {
    display: flex;
    flex-wrap: wrap;
    align-items: center;
    justify-content: center;
    gap: theme('spacing.8');
    background-color: theme('colors.neutral.10');
    padding: theme('spacing.8') theme('spacing.24');
    text-align: center;

    @screen desktop {
      padding-top: theme('spacing.24');
      padding-bottom: theme('spacing.24');
    }
  }

  .x-transform-style-3d {
    transform-style: preserve-3d;
  }

  .x-suggestions--horizontal {
    flex-flow: row nowrap !important;
    align-items: center;
  }
}
*/

